Fix alignment

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -19,7 +19,7 @@
  --pq-unpinned-width:620px;
 }
 
-/* For old browser's that dont support min() */
+/* For old browsers that dont support min() */
 @supports not (width: min(10px, 5vw)) {
  :root {
   --np-portrait-image-size:calc(100vw - (var(--np-image-border)*2));
@@ -308,7 +308,7 @@
   display:none!important;
  }
  .maintoolbar-title, .maintoolbar-subtitle {
-  padding-left:12px;
+  padding-left:10px;
  }
 }
 
